--- a/style.css
+++ b/style.css
@@ -4,19 +4,20 @@ header {
   align-items: center;
 }
 
-#search-results{
-  display: flex;
-  align-items: flex-start;
-  margin: 0 0 0 300px;
+.image-results:hover{
+  opacity: 0.2;
 }
 
-.limited-results {
-  padding: 10px
+.image-results:hover + .search-result-titles{
+  opacity: 1;
+  color: red;
 }
 
 #search-images {
   display: flex;
   justify-content: center;
+  flex-flow: row wrap;
+  width: 1000px;
 }
 
 #main-container {
