--- a/style.css
+++ b/style.css
@@ -8,20 +8,35 @@ header {
   border-radius: 3%;
 }
 .popup-search {
-  margin: 0 0 0 375px;
+  margin: 0 0 0 90px;
+  padding: 0;
+}
+.image-div {
+  display: flex;
+  flex-flow: column wrap;
+  height: 280px;
+  text-align: center;
+  justify-content: space-between;
+  background-color: rgb(240, 240, 240);
+  width: 170px;
+  padding: 10px 0 0 0;
+  /* border: solid darkgray; */
+  border-radius: 8%;
+  margin-bottom: 20px;
+  margin-left: 15px;
 }
 
 .image-results {
   height: 250px;
-  padding: 12px;
-  border-radius: 10%;
-  transition: transform .4s;
+  width: 170px;
+  /* padding: 12px; */
+  /* transition: transform .4s; */
 }
 
-.image-results:hover {
+/* .image-results:hover {
   filter: blur(4px);
   transform: scale(1.05);
-}
+} */
 
 #main-container {
   display: flex;
@@ -52,15 +67,15 @@ header {
 
 #image-container {
   display: flex;
-  background-color: plum;
+  /* background-color: plum; */
   justify-content: center;
   align-items: center;
 }
 #search-images {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: center;
-  background-color: darkgray;
-  border: solid lawngreen
+  /* background-color: darkgray; */
+  /* border: solid lawngreen; */
 }
 
