--- a/style.css
+++ b/style.css
@@ -27,7 +27,10 @@ footer {
   padding: 0;
 }
 .image-div, 
- .current-div{
+ .current-div, 
+ .action-div, 
+ .fantasy-div, 
+ .romance-div {
   display: flex;
   flex-flow: column wrap;
   height: 280px;
@@ -43,7 +46,10 @@ footer {
 }
 
 .image-results, 
-.current-images {
+.current-images, 
+.action-images, 
+.fantasy-images, 
+.romance-images {
   height: 250px;
   width: 170px;
   /* padding: 12px; */
@@ -91,14 +97,20 @@ footer {
 }
 
 #image-container, 
-#currently-airing {
+#currently-airing, 
+#action-genre, 
+#fantasy-genre, 
+#romance-genre {
   display: flex;
   /* background-color: plum; */
   justify-content: center;
   align-items: center;
 }
 #search-images, 
-#current-images {
+#current-images, 
+#action-images, 
+#fantasy-images, 
+#romance-images {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
