--- a/style.css
+++ b/style.css
@@ -8,11 +8,18 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: rgb(134, 219, 95);
 }
+
+h1 {
+  margin-left: 20px;
+}
+
 footer {
   margin-top: auto;
   padding: 10px;
   text-align: center;
+  background-color: darkgreen;
 }
 
 .header-text {
@@ -23,7 +30,6 @@ footer {
   border-radius: 3%;
 }
 .anime-genres {
-  margin: 0;
   text-align: center;
   padding: 0;
 }
@@ -64,6 +70,10 @@ footer {
   transform: scale(1.05);
 } */
 
+#anime-search-form {
+  margin-right: 20px;
+}
+
 #search-shows {
   width: 100px;
  }
@@ -101,7 +111,7 @@ footer {
 
 #image-container, 
 #currently-airing,
-#upcoming-airing, 
+#upcoming-genre, 
 #action-genre, 
 #fantasy-genre, 
 #romance-genre {
@@ -123,7 +133,12 @@ footer {
   /* border: solid lawngreen; */
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 800px) {
+  header {
+    justify-content: space-between;
+  }
+  
+  h1, 
   h2 {
     font-size: large;
   }
@@ -137,6 +152,11 @@ footer {
     font-weight: bolder;
   }
 
+  .anime-genres {
+    margin: 0;
+    text-align: center;
+  }
+
   .image-div,
   .current-div, 
   .upcoming-div,
@@ -147,11 +167,11 @@ footer {
   }
 
   #search-shows {
-    width: 100px;
+    width: 90px;
    }
    
-   #seaerch-button {
-     width: 70px;
+   #search-button {
+     width: 50px;
    }
 
   #main-border {
@@ -165,5 +185,14 @@ footer {
   #main-text {
     width: 200px;
   }
+
+  #search-images, 
+  #current-images,
+  #upcoming-images,
+  #action-images, 
+  #fantasy-images, 
+  #romance-images {
+    width: 80vh;
+} 
 
 }
