--- a/style.css
+++ b/style.css
@@ -1,26 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color:rosybrown;
+  background-image: linear-gradient(#dfe7fd, #dfe7fd, #799AF6);
+  color: #AF4652;
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(134, 219, 95);
+  /* background-color: rgba(55, 6, 23, 0.2); */
 }
 
 h1 {
   margin-left: 20px;
+  color: #E85D04;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
+a:hover {
+  color: #E85D04;
+  text-decoration: underline;
 }
 
 footer {
   margin-top: auto;
   padding: 10px;
   text-align: center;
-  background-color: rosybrown;
+  /* background-color: #03071E; */
 } 
 
 .header-text {
@@ -89,7 +104,8 @@ footer {
 #main-container {
   display: flex;
   justify-content: center;
-  background-color: powderblue;
+  background: 799AF6;
+  background-image: url("https://images.unsplash.com/photo-1548504769-900b70ed122e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3400&q=80");
   height: 500px;
   align-items: center;
 }
@@ -98,10 +114,11 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: orange;
+  background-image: url("https://images.unsplash.com/photo-1594165681163-1b85559cf250?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3300&q=80");
   height: 400px;
   align-items: center;
-  border: purple solid;
+  font-size: larger;
+  font-weight: bolder;
 }
 
 #main-text {
