--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(#000000, #000000, #3B0208);
+  background-image: linear-gradient(#000000, #000000, #000000, #000000, #3B0208);
   /* background: black; */
   color: #cacaca;
   font-family:'PT Sans', sans-serif;
@@ -53,7 +53,7 @@ footer {
 }
 .anime-genres {
   text-align: left;
-  margin: 0 0 0 50px;
+  margin: 0 0 0 85px;
   padding: 0;
   font-size: large;
 }
@@ -181,6 +181,7 @@ footer {
   height: 330px;
   align-items: flex-end;
   width: 90%;
+  border-top: #740407 solid;
 }
 
 #back-up-div {
