--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@ body {
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(#000000, #000000, #000000, #000000, #3B0208);
-  /* background: black; */
   color: #cacaca;
   font-family:'PT Sans', sans-serif;
   font-size: x-large;
+  /* justify-content: center;
+  align-items: center; */
+
 }
 
 header {
@@ -48,15 +50,19 @@ footer {
   font-size: x-large;
   font-weight: bolder;
 }
+
 .bg-header-image {
   border-radius: 3%;
 }
+
 .anime-genres {
-  text-align: left;
-  margin: 0 0 0 85px;
-  padding: 0;
-  font-size: large;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: left;
+  border: crimson solid;
+  width: 90%
 }
+
 .image-div, 
 .current-div, 
 .upcoming-div,
