--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@ body {
   display: flex;
   flex-direction: column;
   /* background-image: linear-gradient(#000000, #000000, #000000, #000000, #3B0208); */
-  background: #000000;
-  color: #cacaca;
+  background: #0f0f0f;
+  color: #ebebeb;
   font-family:'PT Sans', sans-serif;
   font-size: x-large;
- align-items: center;
+  align-items: center;
 }
 
 header {
@@ -70,9 +70,8 @@ footer {
   width: 90%
 }
 
-.image-title-search-div {
+.image-title-div{
   display: flex;
-  flex-flow: row wrap;
   height: 250px;
   text-align: center;
   justify-content: space-between;
@@ -85,22 +84,7 @@ footer {
   position: relative;
 }
 
-.image-title-div {
-  display: flex;
-  flex-flow: column wrap;
-  height: 250px;
-  text-align: center;
-  justify-content: space-between;
-  background: #000000;
-  width: 170px;
-  padding: 0;
-  border-radius: 8%;
-  margin: 0 7px 20px 7px;
-  transition: transform .4s;
-  position: relative;
-}
-
-.image-title-div:hover {
+.image-title-div:hover{
   transform: scale(1.1)
  }
 
@@ -109,17 +93,6 @@ footer {
 }
 
 .image-title-div:hover .anime-titles {
-  position: absolute;
-  top: 15%;
-  left: 50%;
-  transform: translate(-50%, -50%); /* first number changes horizontal and second changes vertical direction */
-  color: white;
-  font-size: 13px;
-  border-radius: 5px;
-  display: block;
-}
-
-.image-title-div:hover .search-result-titles {
   position: absolute;
   top: 15%;
   left: 50%;
@@ -142,7 +115,7 @@ footer {
   background: #74040f;
   color: white;
   font-size: 16px;
-  padding: 12px 24px;
+  padding: 10px 24px;
   border: solid #74040f;
   cursor: pointer;
   border-radius: 5px;
@@ -150,12 +123,18 @@ footer {
   opacity: 1;
 }
 
-.anime-images {
+.anime-images, 
+.anime-search-images {
   height: 250px;
   width: 170px;
 }
 
-.anime-images:hover {
+.anime-search-images {
+  margin: 7px;
+}
+
+.anime-images:hover,
+.anime-search-images:hover {
   opacity: 0.1;
 }
 
@@ -167,6 +146,7 @@ footer {
   background: transparent;
   border: none;
   border-bottom: 2px solid #74040f;
+  color: #ffffff;
  }
  
  #search-button {
@@ -254,10 +234,11 @@ footer {
   flex-flow: column wrap;
   justify-content: center;
   overflow: scroll;
-  height: 340px;
+  height: 290px;
   align-items: flex-end;
   width: 90%;
   border-top: 5px solid #740407 ;
+  margin-bottom: 10px;;
 }
 
 #back-up-div {
