--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 90%;
 }
 
 h1 {
@@ -117,6 +117,11 @@ footer {
   cursor: pointer;
   border-radius: 5px;
 }
+
+.reset-button {
+  padding: 12px 32px;
+}
+
 
 
 .image-title-div:hover .anime-button {
