--- a/style.css
+++ b/style.css
@@ -31,10 +31,6 @@ h2 {
   margin: 0;
 }
 
-h2:hover {
-  color: #ffffff;
-}
-
 a {
   text-decoration: none;
   color: #74040f;
@@ -88,22 +84,7 @@ footer {
   transform: scale(1.1);
  }
 
-.anime-titles {
-  display: none;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%); /* first number changes horizontal and second changes vertical direction */
-  color: white;
-  font-size: 12px;
-  padding: 0;
-  width: 90%;
-  align-items: flex-start;
-}
-
-
-.anime-button, 
-.reset-button {
+.anime-button {
   display: none;
   position: absolute;
   top: 50%;
@@ -117,11 +98,6 @@ footer {
   cursor: pointer;
   border-radius: 5px;
 }
-
-.reset-button {
-  padding: 12px 32px;
-}
-
 
 
 .image-title-div:hover .anime-button {
@@ -138,7 +114,6 @@ footer {
   border-radius: 5px;
   display: block;
 }
-
 
 .anime-images, 
 .anime-search-images {
@@ -268,6 +243,61 @@ footer {
   cursor: pointer;
 }
 
+
+.anime-titles {
+  display: none;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* first number changes horizontal and second changes vertical direction */
+  color: white;
+  font-size: 12px;
+  padding: 0;
+  width: 90%;
+  align-items: flex-start;
+}
+
+.modal-content {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0,0,0,1); */
+  color: #74040f;
+  font-weight: bolder;
+}
+
+.modal-box {
+  background-color: white;
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  width: 40%;
+  padding: 20px;
+  border-radius: 5px;
+  border: 2px solid black;
+  text-align: center;
+}
+
+.close {
+  color: Black;
+  float: right;
+}
+
+.close:hover {
+  color: red;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 800px) {
   header {
     justify-content: space-between;
@@ -339,3 +369,6 @@ footer {
 }
 
 }
+
+
+
