--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
  
+html, 
 body {
   min-height: 100vh;
   display: flex;
@@ -11,17 +12,20 @@ body {
   font-family:'PT Sans', sans-serif;
   font-size: large;
   align-items: center;
+  overflow-x:  hidden;
+  margin: 0;
 }
 
 header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex;
   width: 90%;
+  margin: 10px 0 0 0;
 }
 
 h1 {
-  margin: 0 0 7px 150px;
+  margin: 0 0 0 150px;
   font-family: 'Acme', sans-serif;
   color: #74040f;
   font-size: x-large;
@@ -57,6 +61,40 @@ footer {
 
 .bg-header-image {
   border-radius: 3%;
+}
+
+.modal-content {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  color: #74040f;
+  font-weight: bolder;
+}
+
+.modal-box {
+  background-color: white;
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  width: 40%;
+  height: 40%;
+  padding: 20px;
+  border-radius: 5px;
+  border: 2px solid #74040f;
+  text-align: center;
+  overflow: scroll;
+}
+
+.close {
+  color: Black;
+  float: right;
+}
+
+.close:hover {
+  color: #74040f;
+  cursor: pointer;
 }
 
 .anime-genres {
@@ -99,7 +137,6 @@ footer {
   border-radius: 5px;
 }
 
-
 .image-title-div:hover .anime-button {
   position: absolute;
   top: 50%;
@@ -122,7 +159,7 @@ footer {
 }
 
 #anime-search-form {
-  margin: 0 150px 7px 0;
+  margin: 0 150px 0 0;
 }
 
 #search-shows {
@@ -150,8 +187,8 @@ footer {
   background-image: linear-gradient(to right, #c2ecff, #f8dbff, #c2ecff);
   height: 600px;
   align-items: center;
-  width: 100%;
-  margin-bottom: 35px;
+  width: 100vw;
+  margin: 0 0 35px 0;
 }
 
 #main-border {
@@ -236,139 +273,56 @@ footer {
   height: 50px;
   width: 50px;
   font-size: xx-large;
-  margin: 0 10px 5px 0;
+  margin: 0 0 7px 0;
 }
 
 #back-up:hover {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 650px) {
 
-.anime-titles {
-  display: none;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%); /* first number changes horizontal and second changes vertical direction */
-  color: white;
-  font-size: 12px;
-  padding: 0;
-  width: 90%;
-  align-items: flex-start;
-}
-
-.modal-content {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  /* background-color: rgba(0,0,0,1); */
-  color: #74040f;
-  font-weight: bolder;
-}
-
-.modal-box {
-  background-color: white;
-  position: absolute;
-  top: 20%;
-  left: 30%;
-  width: 40%;
-  padding: 20px;
-  border-radius: 5px;
-  border: 2px solid black;
-  text-align: center;
-}
-
-.close {
-  color: Black;
-  float: right;
-}
-
-.close:hover {
-  color: red;
-  cursor: pointer;
-}
-
-
-
-
-
-
-
-
-
-@media only screen and (max-width: 800px) {
-  header {
-    justify-content: space-between;
-  }
-  
-  h1, 
-  h2 {
-    font-size: large;
-  }
-  
-  .bg-header-image {
-    height: 200px; 
-  }
-
-  .header-text {
-    font-size: large;
-    font-weight: bolder;
-  }
-
-  .anime-genres {
+  #anime-search-form {
     margin: 0;
-    text-align: center;
   }
 
-  .image-div,
-  .current-div, 
-  .upcoming-div,
-  .action-div, 
-  .fantasy-div, 
-  .romance-div {
-    margin: 7px;
-}
+  h1 {
+    margin: 0;
+  }
 
-  #search-shows {
-    width: 90px;
-   }
-   
-   #search-button {
-     width: 50px;
-   }
+  .bg-header-image {
+    width: 130px;
+  }
+
+  .modal-box {
+    top: 30%;
+    left: 17%;
+    width: 60%;
+    height: 40%;
+    padding: 10px 5px 10px 5px;
+  }
 
   #main-border {
     height: 100%;
-  }
-  #main-image, 
-  #main-text {
-    margin: 10px;
-  }
-
-  #main-text {
-    width: 200px;
-  }
-
-  #search-images, 
-  #current-images,
-  #upcoming-images,
-  #action-images, 
-  #fantasy-images, 
-  #romance-images {
-    width: 80vh;
     align-items: center;
-} 
-
-  #search-images {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    overflow: scroll;
-}
+  }
 
 }
 
+@media only screen and (max-width: 540px) {
 
+  .modal-box {
+    left: 13%;
+    width: 70%;
+  }
 
+  .bg-header-image {
+    width: 150px;
+    margin: 0;
+  }
+
+  #search-shows {
+    width: 80px;
+  }
+
+}
