--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
- 
-html, 
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap'); 
+
+html {
+  overflow-x: hidden;
+}
+
 body {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
   /* background-image: linear-gradient(#000000, #000000, #000000, #000000, #3B0208); */
   background: #0f0f0f;
   color: #ebebeb;
   font-family:'PT Sans', sans-serif;
   font-size: large;
-  align-items: center;
-  overflow-x:  hidden;
-  margin: 0;
 }
 
 header {
@@ -258,7 +258,7 @@ footer {
   align-items: flex-end;
   width: 90%;
   border-top: 5px solid #740407 ;
-  margin-bottom: 10px;;
+  margin-bottom: 10px;
 }
 
 #back-up-div {
@@ -279,6 +279,7 @@ footer {
 #back-up:hover {
   cursor: pointer;
 }
+
 
 @media only screen and (max-width: 650px) {
 
@@ -306,6 +307,7 @@ footer {
     height: 100%;
     align-items: center;
   }
+
 
 }
 
