--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@ body {
 
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex;
   width: 90%;
   margin: 10px 0 18px 0;
 }
 
 h1 {
-  margin: 0 0 0 150px;
+  margin: 0 0 0 35px;
   font-family: 'Acme', sans-serif;
   color: #74040f;
   font-size: x-large;
@@ -46,6 +46,7 @@ a:hover {
   color: #3B0208;
   text-decoration: none; 
 }
+
 
 footer {
   margin-top: auto;
@@ -163,13 +164,13 @@ footer {
 }
 
 #anime-search-form {
-  margin: 0 150px 0 0;
+  /* margin: 0 100px 0 0; */
 }
 
 #search-shows {
   background: transparent;
   border: none;
-  border-bottom: 2px solid #74040f;
+  border: 2px solid #74040f;
   color: #ffffff;
  }
  
@@ -179,10 +180,12 @@ footer {
    border: none;
    color: #74040f;
    font-size: large;
+   padding: 0;
  }
 
  #search-button:hover {
    cursor: pointer;
+   color: #8d0714;
  }
 
 #main-container, 
