--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ footer {
   border: #74040f solid;
   height: 50px;
   width: 50px;
-  font-size: medium;
+  font-size: 16px;
   margin: 0 0 7px 0;
 }
 
