--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 
 html {
   overflow-x: hidden;
@@ -11,7 +11,7 @@ body {
   align-items: center;
   background: #0f0f0f;
   color: #ebebeb;
-  font-family:'PT Sans', sans-serif;
+  font-family: 'PT Sans', sans-serif;
   font-size: large;
   margin: 0;
   overflow-x: hidden;
@@ -44,7 +44,7 @@ a {
 
 a:hover {
   color: #8d0714;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
 
@@ -54,15 +54,15 @@ footer {
   text-align: center;
   font-size: medium;
   width: 90%;
-} 
+}
 
-.header-text, 
+.header-text,
 .banner-text {
   font-size: x-large;
   font-weight: bolder;
 }
 
-.bg-header-image, 
+.bg-header-image,
 .banner-image {
   border-radius: 3%;
 }
@@ -109,7 +109,7 @@ footer {
   width: 90%
 }
 
-.image-title-div{
+.image-title-div {
   display: flex;
   height: 250px;
   text-align: center;
@@ -120,19 +120,19 @@ footer {
   margin: 0 7px 20px 7px;
   transition: transform .4s;
   position: relative;
-  
+
 }
 
-.image-title-div:hover{
+.image-title-div:hover {
   transform: scale(1.1);
- }
+}
 
 
-.anime-button{
+.anime-button {
   display: none
 }
 
- /* Source: https://www.w3schools.com/howto/howto_css_button_on_image.asp*/
+/* Source: https://www.w3schools.com/howto/howto_css_button_on_image.asp*/
 .image-title-div:hover .anime-button {
   display: block;
   position: absolute;
@@ -147,7 +147,7 @@ footer {
   border-radius: 5px;
 }
 
-.anime-images, 
+.anime-images,
 .anime-search-images {
   height: 250px;
   width: 170px;
@@ -158,23 +158,23 @@ footer {
   border: none;
   border: 2px solid #74040f;
   color: #ffffff;
- }
- 
- #search-button {
-   width: 70px;
-   background: transparent;
-   border: none;
-   color: #74040f;
-   font-size: large;
-   padding: 0;
- }
+}
 
- #search-button:hover {
-   cursor: pointer;
-   color: #8d0714;
- }
+#search-button {
+  width: 70px;
+  background: transparent;
+  border: none;
+  color: #74040f;
+  font-size: large;
+  padding: 0;
+}
 
-#main-container, 
+#search-button:hover {
+  cursor: pointer;
+  color: #8d0714;
+}
+
+#main-container,
 #banner-container {
   display: flex;
   justify-content: center;
@@ -189,7 +189,7 @@ footer {
   background-image: linear-gradient(to right, #DDD055, #E88D67, #DDD055);
 }
 
-#main-border, 
+#main-border,
 #banner-border {
   display: flex;
   flex-wrap: wrap;
@@ -206,7 +206,7 @@ footer {
   background-image: url('https://images.unsplash.com/photo-1580508244245-c446ca981a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80');
 }
 
-#main-text, 
+#main-text,
 #banner-text {
   width: 300px;
   margin: 25px;
@@ -225,9 +225,9 @@ footer {
 
 #image-container,
 #currently-airing,
-#upcoming-genre, 
-#action-genre, 
-#fantasy-genre, 
+#upcoming-genre,
+#action-genre,
+#fantasy-genre,
 #romance-genre {
   display: flex;
   flex-flow: row wrap;
@@ -251,8 +251,8 @@ footer {
 
 #current-images,
 #upcoming-images,
-#action-images, 
-#fantasy-images, 
+#action-images,
+#fantasy-images,
 #romance-images {
   display: flex;
   flex-flow: column wrap;
@@ -261,9 +261,32 @@ footer {
   height: 310px;
   align-items: flex-end;
   width: 90%;
-  border-top: 5px solid #740407 ;
+  border-top: 5px solid #740407;
   margin-bottom: 10px;
 }
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#current-images::-webkit-scrollbar,
+#upcoming-images::-webkit-scrollbar,
+#action-images::-webkit-scrollbar,
+#fantasy-images::-webkit-scrollbar,
+#romance-images::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#current-images,
+#upcoming-images,
+#action-images,
+#fantasy-images,
+#romance-images {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
 
 #back-up-div {
   display: flex;
@@ -289,7 +312,7 @@ footer {
   cursor: pointer;
 }
 
-#linkedin, 
+#linkedin,
 #github {
   width: 25px;
 }
@@ -304,7 +327,7 @@ footer {
     margin: 0;
   }
 
-  .bg-header-image, 
+  .bg-header-image,
   .banner-image {
     width: 130px;
   }
@@ -317,7 +340,7 @@ footer {
     padding: 10px 5px 10px 5px;
   }
 
-  #main-border, 
+  #main-border,
   #main-border {
     height: 100%;
     align-items: center;
@@ -333,13 +356,13 @@ footer {
     width: 70%;
   }
 
-  .bg-header-image, 
+  .bg-header-image,
   .banner-image {
     width: 150px;
     margin: 0;
   }
 
-  #main-text, 
+  #main-text,
   #banner-text {
     margin: 0;
   }
